Bug #12400
loader: misaligned access of dos_partition structure
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
armv7 crash due to misligned access of dos_partition dp_start field.
Allocate and make copy of dos_partition array to make sure the data is aligned.
FreeBSD update: https://svnweb.freebsd.org/base?view=revision&revision=359147
Fix is tested on armv7, also on x86.
Updated by Electric Monk 10 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 3fd7ddd197d247df98d4c6efd8fb2a6447e338de
commit 3fd7ddd197d247df98d4c6efd8fb2a6447e338de Author: Toomas Soome <tsoome@me.com> Date: 2020-03-22T17:41:56.000Z 12400 loader: misaligned access of dos_partition structure Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Robert Mustacchi <rm@fingolfin.org>